Bug 280456 - Dolphin crashes when trying to "Cut" using CTRL+X
Summary: Dolphin crashes when trying to "Cut" using CTRL+X
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 283526 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-20 08:59 UTC by Michael
Modified: 2011-10-13 16:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2011-08-20 08:59:01 UTC
Application: dolphin (1.99)
KDE Platform Version: 4.7.41 (4.7.41 (KDE 4.8 >= 20110807) (Compiled from sources)
Qt Version: 4.7.3
Operating System: Linux 3.1.0-rc1+ x86_64
Distribution: "Gentoo Base System release 2.0.3"

-- Information about the crash:
- What I was doing when the application crashed:

* Selected multiple files with the mouse using the CTRL key
* Hit CTRL+X


Thanks for your work on KDE :)

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fa4b4ebc760 (LWP 24302))]

Thread 2 (Thread 0x7fa49cfa4700 (LWP 24304)):
#0  0x00007fa4b2497783 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fa4af2496f4 in g_main_context_poll (n_fds=1, fds=0x17c62c0, timeout=-1, context=0x17f5340, priority=<optimized out>) at gmain.c:3405
#2  g_main_context_iterate (context=0x17f5340, block=1, dispatch=1, self=<optimized out>) at gmain.c:3087
#3  0x00007fa4af249c2d in g_main_context_iteration (context=0x17f5340, may_block=1) at gmain.c:3155
#4  0x00007fa4b3a9d9b6 in QEventDispatcherGlib::processEvents (this=0x17f2120, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fa4b3a71d22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fa4b3a71f6c in QEventLoop::exec (this=0x7fa49cfa3de0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fa4b3987734 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:492
#8  0x00007fa4b3a53768 in QInotifyFileSystemWatcherEngine::run (this=0x17f30b0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fa4b3989f95 in QThreadPrivate::start (arg=0x17f30b0) at thread/qthread_unix.cpp:320
#10 0x00007fa4b36f9d4c in start_thread (arg=0x7fa49cfa4700) at pthread_create.c:301
#11 0x00007fa4b24a058d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7fa4b4ebc760 (LWP 24302)):
[KCrash Handler]
#6  d_func (this=<optimized out>) at kernel/qmimedata.h:97
#7  QMimeData::setData (this=0x0, mimeType=..., data=...) at kernel/qmimedata.cpp:546
#8  0x00007fa4a15c68c6 in KonqMimeData::addIsCutSelection (mimeData=0x0, cut=<optimized out>) at /var/tmp/portage/kde-base/libkonq-9999/work/libkonq-9999/lib/konq/konqmimedata.cpp:65
#9  0x00007fa4a134d386 in DolphinView::cutSelectedItems (this=<optimized out>) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin-9999/dolphin/src/views/dolphinview.cpp:599
#10 0x00007fa4a1d350ed in DolphinMainWindow::qt_metacall (this=0x17c3bd0, _c=QMetaObject::InvokeMetaMethod, _id=16, _a=0x7fff4d57c460) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin-9999_build/dolphin/src/dolphinmainwindow.moc:225
#11 0x00007fa4b3a870ff in QMetaObject::activate (sender=0x1807520, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff4d57c460) at kernel/qobject.cpp:3278
#12 0x00007fa4b2c22512 in QAction::triggered (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#13 0x00007fa4b2c2270a in QAction::activate (this=0x1807520, event=<optimized out>) at kernel/qaction.cpp:1257
#14 0x00007fa4b2c22887 in QAction::event (this=<optimized out>, e=<optimized out>) at kernel/qaction.cpp:1183
#15 0x00007fa4b4756b6c in KAction::event (this=0x1807520, event=0x7fff4d57cb00) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/actions/kaction.cpp:131
#16 0x00007fa4b2c28b74 in QApplicationPrivate::notify_helper (this=0x167e200, receiver=0x1807520, e=0x7fff4d57cb00) at kernel/qapplication.cpp:4462
#17 0x00007fa4b2c2d728 in QApplication::notify (this=<optimized out>, receiver=0x1807520, e=0x7fff4d57cb00) at kernel/qapplication.cpp:4341
#18 0x00007fa4b4830932 in KApplication::notify (this=0x7fff4d57e100, receiver=0x1807520, event=0x7fff4d57cb00) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:311
#19 0x00007fa4b3a7296c in QCoreApplication::notifyInternal (this=0x7fff4d57e100, receiver=0x1807520, event=0x7fff4d57cb00) at kernel/qcoreapplication.cpp:731
#20 0x00007fa4b2c5b760 in sendEvent (event=0x7fff4d57cb00, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#21 QShortcutMap::dispatchEvent (this=<optimized out>, e=0x7fff4d57d180) at kernel/qshortcutmap.cpp:879
#22 0x00007fa4b2c5cc48 in QShortcutMap::tryShortcutEvent (this=0x167e328, o=<optimized out>, e=0x7fff4d57d180) at kernel/qshortcutmap.cpp:364
#23 0x00007fa4b2c2f49a in QApplication::notify (this=0x7fff4d57e100, receiver=0x1882000, e=0x7fff4d57d180) at kernel/qapplication.cpp:3904
#24 0x00007fa4b4830932 in KApplication::notify (this=0x7fff4d57e100, receiver=0x1882000, event=0x7fff4d57d180) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:311
#25 0x00007fa4b3a7296c in QCoreApplication::notifyInternal (this=0x7fff4d57e100, receiver=0x1882000, event=0x7fff4d57d180) at kernel/qcoreapplication.cpp:731
#26 0x00007fa4b2ccab9e in QKeyMapper::sendKeyEvent (keyWidget=0x1882000, grab=<optimized out>, type=QEvent::KeyPress, code=88, modifiers=<optimized out>, text=..., autorepeat=false, count=1, nativeScanCode=53, nativeVirtualKey=120, nativeModifiers=20) at kernel/qkeymapper_x11.cpp:1866
#27 0x00007fa4b2ccafdf in QKeyMapperPrivate::translateKeyEvent (this=<optimized out>, keyWidget=0x1882000, event=<optimized out>, grab=false) at kernel/qkeymapper_x11.cpp:1836
#28 0x00007fa4b2ca7433 in QApplication::x11ProcessEvent (this=0x7fff4d57e100, event=0x7fff4d57dd50) at kernel/qapplication_x11.cpp:3480
#29 0x00007fa4b2ccf01a in x11EventSourceDispatch (s=0x1682070, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007fa4af2491b3 in g_main_dispatch (context=0x1680c40) at gmain.c:2441
#31 g_main_context_dispatch (context=0x1680c40) at gmain.c:3014
#32 0x00007fa4af249990 in g_main_context_iterate (context=0x1680c40, block=1, dispatch=1, self=<optimized out>) at gmain.c:3092
#33 0x00007fa4af249c2d in g_main_context_iteration (context=0x1680c40, may_block=1) at gmain.c:3155
#34 0x00007fa4b3a9d95f in QEventDispatcherGlib::processEvents (this=0x167e1c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007fa4b2ccecce in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007fa4b3a71d22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007fa4b3a71f6c in QEventLoop::exec (this=0x7fff4d57e050, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007fa4b3a763db in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#39 0x00007fa4a1d40414 in kdemain (argc=5, argv=0x1632390) at /var/tmp/portage/kde-base/dolphin-9999/work/dolphin-9999/dolphin/src/main.cpp:85
#40 0x0000000000407d6a in launch (argc=<optimized out>, _name=0x16598a8 "/usr/bin/dolphin", args=<optimized out>, cwd=0x16598b9 "--icon", envc=1297606352, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x1659900 "brotscheibe;1313830192;267026;23996_TIME41350501") at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:734
#41 0x0000000000408a3b in handle_launcher_request (sock=<optimized out>, who=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:1226
#42 0x0000000000408f22 in handle_requests (waitForPid=0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:1419
#43 0x0000000000409818 in main (argc=2, argv=0x7fff4d57f058, envp=0x7fff4d57f070) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Frank Reininghaus 2011-08-26 15:35:51 UTC
Thanks for reporting this crash. I'll push a fix to master in a minute.
Comment 2 Frank Reininghaus 2011-08-26 15:36:28 UTC
Git commit bbcce715f4f59a889db2db9c7110a5b09eb9f830 by Frank Reininghaus.
Committed on 26/08/2011 at 17:34.
Pushed by freininghaus into branch 'master'.

Implement DolphinView::selectionMimeData()

BUG:280456

M  +5    -5    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/bbcce715f4f59a889db2db9c7110a5b09eb9f830
Comment 3 Dario Andres 2011-10-09 23:15:09 UTC
[Comment from a bug report cleaner]
Frank: did this also affect KDE SC 4.7.x ? Bug 283526 seems the same trace. Thanks
Comment 4 Frank Reininghaus 2011-10-13 16:56:19 UTC
(In reply to comment #3)
> [Comment from a bug report cleaner]
> Frank: did this also affect KDE SC 4.7.x ? Bug 283526 seems the same trace.
> Thanks

That report seems to be about master as well (Dolphin 1.99).
Comment 5 Frank Reininghaus 2011-10-13 16:57:50 UTC
*** Bug 283526 has been marked as a duplicate of this bug. ***