Implement DolphinView::selectionMimeData()

BUG:280456